--- a/src/lib/shelf/layout/_layout-panel.scss
+++ b/src/lib/shelf/layout/_layout-panel.scss
@@ -14,6 +14,7 @@
     border-radius: $R;
     overflow: hidden;
     display: grid;
+    position: relative;
   }
   //-----------------------------------
   &.show-mask {
