--- a/src/lib/action/actionbar/style/bar-item-con.scss
+++ b/src/lib/action/actionbar/style/bar-item-con.scss
@@ -5,13 +5,12 @@
   height: 0;
   overflow: hidden;
   opacity: 0.6;
+  padding-bottom: 1px;
   //transition: opacity 0.3s;
   background-color: var(--ti-color-menu);
   color: var(--ti-color-menu-f);
   min-width: 10em;
-  box-shadow:
-    -1px -1px var(--ti-color-light),
-    1px 1px var(--ti-color-dark),
+  box-shadow: -1px -1px var(--ti-color-light), 1px 1px var(--ti-color-dark),
     6px 6px 15px var(--ti-color-mask-thin);
   border-radius: var(--ti-measure-r-s);
   z-index: $z-menu + 2;
