--- a/src/lib/action/actionbar/style/bar-effect.scss
+++ b/src/lib/action/actionbar/style/bar-effect.scss
@@ -1,10 +1,10 @@
 .ti-actionbar {
-  .bar-item {
+  .bar-item-info {
     &.spining-scale {
-      > .bar-item-head > .item-icon {
+      > .item-icon {
         transition: transform 300ms;
       }
-      > .bar-item-head:hover > .item-icon {
+      &:hover .item-icon {
         transform: scale(1.4) rotate(360deg);
       }
     }
