done for TiTags / make TiFilter more flexable

--- a/src/assets/style/color/light.scss
+++ b/src/assets/style/color/light.scss
@@ -46,9 +46,9 @@
   --ti-color-info: #2196f3;
   --ti-color-info-b: #4fa7ee;
   --ti-color-info-r: #fff;
-  --ti-color-error: #f44336;
-  --ti-color-error-b: #f16e64;
-  --ti-color-error-r: #fcc;
+  --ti-color-danger: #f44336;
+  --ti-color-danger-b: #f16e64;
+  --ti-color-danger-r: #fcc;
   --ti-color-track: #888;
   --ti-color-track-b: #a7a7a7;
   --ti-color-track-r: #fff;
