--- a/src/lib/action/actionbar/style/bar-effect.scss
+++ b/src/lib/action/actionbar/style/bar-effect.scss
@@ -1,6 +1,6 @@
 .ti-actionbar {
   .bar-item-info {
-    &.spining-scale {
+    &.hover-rotate {
       > .item-icon {
         transition: transform 300ms;
       }
