--- a/src/lib/shelf/block/ti-block.scss
+++ b/src/lib/shelf/block/ti-block.scss
@@ -56,7 +56,9 @@
   @include __color_by_name(success);
   @include __color_by_name(warn);
   @include __color_by_name(info);
-  @include __color_by_name(error);
+  @include __color_by_name(danger);
   @include __color_by_name(track);
   @include __color_by_name(disable);
+  @include __color_by_name(text);
+  @include __color_by_name(number);
 }
