--- a/src/assets/style/color/dark.scss
+++ b/src/assets/style/color/dark.scss
@@ -46,9 +46,9 @@
   --ti-color-info: #2196f3;
   --ti-color-info-b: #3c9be9;
   --ti-color-info-r: #fff;
-  --ti-color-error: #f44336;
-  --ti-color-error-b: #e9574d;
-  --ti-color-error-r: #fcc;
+  --ti-color-danger: #f44336;
+  --ti-color-danger-b: #e9574d;
+  --ti-color-danger-r: #fcc;
   --ti-color-track: #888;
   --ti-color-track-b: #a7a7a7;
   --ti-color-track-r: #fff;
