--- a/src/lib/action/actionbar/style/top-as-button.scss
+++ b/src/lib/action/actionbar/style/top-as-button.scss
@@ -1,10 +1,13 @@
 .ti-actionbar.top-as-button {
   padding: var(--ti-measure-box-pad);
-  .bar-item[aspect="top"] {
+  .bar-item[aspect='top'] {
     > .bar-item-info {
       @include flex-center($wp: nowrap);
       padding: 0.3em 0.7em;
       min-width: 6em;
+      border-radius: var(--ti-measure-r-s);
+      margin: SZ(2) 0;
+      border: 1px solid var(--ti-color-border-weak);
       //------------------------------------
       .item-icon {
         @include flex-center;
@@ -16,11 +19,8 @@
         flex: 0 0 auto;
       }
       //------------------------------------
-      &[bar-layout-mode="V"] {
+      &[bar-layout-mode='V'] {
         justify-content: flex-start;
-        border-radius: var(--ti-measure-r-s);
-        margin: SZ(2) 0;
-        border: 1px solid var(--ti-color-border-weak);
         .item-text {
           flex: 1 1 auto;
         }
