--- a/src/assets/style/color/light.scss
+++ b/src/assets/style/color/light.scss
@@ -52,9 +52,9 @@
   --ti-color-track: #888;
   --ti-color-track-b: #a7a7a7;
   --ti-color-track-r: #fff;
-  --ti-color-disable: #999;
-  --ti-color-disable-b: #adadad;
-  --ti-color-disable-r: #e5e5e5;
+  --ti-color-disable: rgba(10, 10, 10, 0.1);
+  --ti-color-disable-b: #d5d5d5;
+  --ti-color-disable-r: rgba(1, 1, 1, 0.3);
   --ti-color-text: #008800;
   --ti-color-text-b: #0f9c0f;
   --ti-color-text-r: #fff;
