--- a/src/lib/action/actionbar/style/bar.scss
+++ b/src/lib/action/actionbar/style/bar.scss
@@ -9,6 +9,7 @@
     // 无效条目
     &.is-disabled {
       opacity: 0.4;
+      filter: grayscale(100%);
     }
     &[aspect='sub'] {
       &:first-child {
