--- a/src/lib/input/combo-filter/ti-combo-filter.scss
+++ b/src/lib/input/combo-filter/ti-combo-filter.scss
@@ -2,6 +2,7 @@
   //---------------------------------------
   .part-sorter.ti-sorter {
     padding: var(--ti-gap-m);
+    margin: auto;
   }
   //---------------------------------------
   &.layout-comfy .part-sorter.ti-sorter {
