--- a/src/assets/style/measure/comfy.scss
+++ b/src/assets/style/measure/comfy.scss
@@ -1,7 +1,9 @@
 @mixin use_measure_comfy {
+  --ti-measure-r-h: 16px;
   --ti-measure-r-b: 12px;
   --ti-measure-r-m: 8px;
   --ti-measure-r-s: 4px;
+  --ti-measure-r-t: 2px;
 
   --ti-measure-box-pad: 6px;
   --ti-measure-box-height: 32px;
