--- a/src/lib/input/switcher/ti-switcher.scss
+++ b/src/lib/input/switcher/ti-switcher.scss
@@ -1,11 +1,22 @@
 .ti-switcher {
   @include flex-align;
+  @include aspect_fontsize('&.item-size');
+  @include aspect_gap('&.item-gap');
+  //---------------------------------------
   .sw-item {
     @include flex-align-nowrap;
+    @include aspect_radius('&.item-r');
+    @include aspect_color('&.is-checked.is');
+    @include aspect_color_fborder('&.is');
     cursor: pointer;
-    padding: var(--ti-gap-s) var(--ti-gap-b);
-    border-radius: var(--ti-measure-r-s);
-    background-color: #ccc;
-    margin:  var(--ti-gap-t);
+    padding: 0.3em 0.6em;
+    border-width: 1px;
+    border-style: solid;
+    gap: 0.5em;
   }
+  //---------------------------------------
+  &.is-nowrap {
+    flex-wrap: nowrap;
+  }
+  //---------------------------------------
 }
