--- a/src/lib/input/combo-filter/ti-combo-filter.scss
+++ b/src/lib/input/combo-filter/ti-combo-filter.scss
@@ -6,7 +6,7 @@
   }
   //---------------------------------------
   &.layout-comfy .part-sorter.ti-sorter {
-    background-color: var(--ti-color-tab);
+    border-top: 1px solid var(--ti-color-border-shallow);
   }
   //---------------------------------------
 }
