--- a/src/lib/input/switcher/ti-switcher.scss
+++ b/src/lib/input/switcher/ti-switcher.scss
@@ -1,6 +1,6 @@
 .ti-switcher {
   @include flex-align;
-  @include aspect_fontsize("&.item-size");
+  @include aspect_fontsize("&.item-size", ".sw-item");
   @include aspect_gap("&.item-gap");
   user-select: none;
   //---------------------------------------
@@ -9,11 +9,15 @@
     @include aspect_radius("&.item-r");
     @include aspect_color("&.is-checked.is");
     @include aspect_color_fborder("&.is");
-
-    padding: 0.3em 0.6em;
+    height: 2em;
+    line-height: 2em;
+    padding: 0 0.6em;
     border-width: 1px;
     border-style: solid;
     gap: 0.5em;
+    > .it-text {
+      line-height: 2em;
+    }
   }
   //---------------------------------------
   &.is-editable {
