--- a/src/lib/shelf/playground/playground.scss
+++ b/src/lib/shelf/playground/playground.scss
@@ -3,14 +3,17 @@
   width: 100%;
   height: 100%;
   > .part-sub-event {
-    @include flex-align;
+    @include flex-align-nowrap;
     @include font-fixed($sz: 10px);
     position: relative;
     padding: 0 1em;
+    overflow: hidden;
     .event-icon {
+      flex: 0 0 auto;
       font-size: 16px;
     }
     .event-time {
+      flex: 0 0 auto;
       color: var(--ti-color-track);
       font-size: 0.9em;
       padding: 0 0.5em;
@@ -20,11 +23,16 @@
       }
     }
     .event-name {
+      flex: 0 0 auto;
       color: var(--ti-color-primary);
       padding-right: 0.5em;
     }
     .event-args {
+      flex: 1 1 auto;
       color: var(--ti-color-track);
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
     }
   }
 }
