--- a/src/lib/action/actionbar/style/bar-item-con.scss
+++ b/src/lib/action/actionbar/style/bar-item-con.scss
@@ -10,10 +10,12 @@
   background-color: var(--ti-color-menu);
   color: var(--ti-color-menu-f);
   min-width: 10em;
-  box-shadow: -1px -1px var(--ti-color-light), 1px 1px var(--ti-color-dark),
+  box-shadow:
+    -1px -1px var(--ti-color-light),
+    1px 1px var(--ti-color-dark),
     6px 6px 15px var(--ti-color-mask-thin);
   border-radius: var(--ti-measure-r-s);
-  z-index: $z-menu + 2;
+  z-index: $z-menu + 1;
   &.is-opened {
     height: unset;
   }
@@ -21,4 +23,8 @@
     height: unset;
     opacity: 1;
   }
+}
+
+.bar-item {
+  @include aspect_radius("&.item-r", "> .bar-item-con");
 }
