--- a/src/lib/shelf/grid-fields/style/ti-grid-fields.scss
+++ b/src/lib/shelf/grid-fields/style/ti-grid-fields.scss
@@ -1,5 +1,7 @@
 .ti-grid-fields {
-  @include flex-align-v-nowrap;
+  &.fixed-footer {
+    @include flex-align-v-nowrap;
+  }
   width: 100%;
   height: 100%;
   overflow: auto;
@@ -16,7 +18,7 @@
     padding: 0.6em 0;
     border-bottom: 1px solid var(--ti-color-border-shallow);
     > .as-snippet-text {
-      margin: 0 .5em;
+      margin: 0 0.5em;
     }
   }
   //-------------------------------------------------------------
